# fmMuleInterfaceCompare

./: .dockerignore  .env  .gitignore  .gitmodules  .pylintrc  Dockerfile  Dockerfile.base  README.md  alembic.ini  app.py  changes.diff  debug.py  docker-compose.yml  docker_compose.patch  docker_env.sh  env.sh  fleet_orchestrator.sh  fleet_simulator.py  fm_apis.doc  fm_init.py  fm_windows_setup.md  main.py  ota_au.diff  push.sh  pyproject.toml  readme.md  regenerate_config.py  release_notes.md  restart.sh  run_docker_with_bridge_net.diff  setup_instructions.md  sync_fm_plugins.sh  update_code.sh
alembic/: env.py
app/: main.py  readme.md
config/: config.toml
configure_fm/poetry_dependencies/: pyproject.toml
connections/: client_models.py  clients.py  ies.py
core/: common.py  config.py  config_validator.py  config_validators.py  constants.py  db.py  handler_configuration.py  logs.py  mongo_db.py  readme.md
dashboard/: asset-manifest.json  index.html  manifest.json
docker_files/: Dockerfile  Dockerfile.base  grafana.Dockerfile  mongo.Dockerfile  nginx.Dockerfile  ttyd.Dockerfile
docs/: dev_help.md  fm_architecture.md  fm_overview.md  fmapi.doc  remote_drive.md  support_manual.md
endpoints/: request_models.py  sherpa.py
entities/: base_entities.py  fleet_entities.py  trip_entities.py
fm_dashboard/: asset-manifest.json  index.html  manifest.json  mockServiceWorker.js  service-worker.js  service-worker.js.map
map_editor_dashboard/: asset-manifest.json  index.html  precache-manifest.77944ace9d20eface6c1c30db7cb070f.js  precache-manifest.ed6c88997c40391e09780646124d14ce.js  service-worker.js
master_fm_comms/: aws_master_cert.pem  mfm_rev_tunnel.tar  mfm_utils.py  readme.md  send_updates_to_mfm.py  send_ws_updates_to_mfm.py
misc/: clear_db.sh  dm.conf  docker-compose.yml  docker-compose_windows.yml  docker_compose_bridge.yml  docker_compose_dev.yml  docker_compose_host.yml  docker_compose_untagged.yml  fm.conf  (+9 more)
(+563 files in other folders)
