[tool.black]
line-length = 92

[tool.poetry]
name = "fleet_manager"
version = "0.1.0"
description = "Ati FM"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "0.92.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
click = "7.1.2"
bcrypt = "^3.2.0"
aioredis = "^2.0.0"
rq = "^1.10.0"
PyJWT = "^2.3.0"
numpy = "1.21.5"
scipy = "^1.7.3"
networkx = "^2.6.3"
protobuf = "^3.19.1"
zmq = "^0.0.0"
matplotlib = "^3.5.1"
absl-py = "1.0.0"
numba = "0.56.4"
toml = "^0.10.2"
requests = "^2.28.1"
glob2 = "^0.7"
pandas = "1.1"
tabulate = "^0.9.0"
cryptography = "39.0.1"
slack-sdk = "3.19.5"
zstandard = "^0.20.0"
opencv-python = "^4.7.0.68"
psycopg2 = "^2.9.5"
psutil = "^5.9.4"
python-multipart = "^0.0.6"
serial = "^0.0.97"
pymongo = "^4.4.1"
certifi = "2023.7.22"
slowapi = "^0.1.8"
fastapi-limiter = "^0.1.5"
[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
fm-manage = 'fm.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
