[tool.black]
line-length = 92

[tool.poetry]
name = "Configure FM"
version = "0.1.0"
description = "Ati Configure FM"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
click = "7.1.2"
bcrypt = "^3.2.0"
redis = "^3.5.3"
aioredis = "^2.0.0"
rq = "^1.10.0"
PyJWT = "^2.3.0"
psycopg2-binary = "^2.9.2"
numpy = "1.21.5"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
toml = "^0.10.2"
requests = "^2.28.1"
glob2 = "^0.7"
pandas = "1.1"
tabulate = "^0.9.0"
cryptography = "^38.0.4"
slack-sdk = "3.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
